Speculative fix for bug 869933: Keep tab background offset on tabstrip.

If we could somehow add a tab without triggering BrowserViewLayout::Layout()
(which seems plausible in theory although I could not make it happen in
practice), the new tab's background offset would not be set correctly.  Just
initializing the member to 0 would not fix this.  Instead, keep the current
background offset on the tabstrip, which ensures tabs always see the most
up-to-date value.

This also happens to use (trivially) less memory.

Bug: 869933
Change-Id: I71c43dfd16472c048d54168271ef851e4e8e9afb
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1761491
Auto-Submit: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#688567}

Former-commit-id: ddef800c557cf4505bc9ae475a98723ee95e3e29